--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- rotating gradient behind -->
@@ -76,7 +76,7 @@
             <div style="max-width: 360px; width: 100%">
               <!-- replace src with your image path -->
               <img
-                src="../static/image/ssprofile1.jpg"
+                src="ssprofile1.jpg"
                 alt="Dr Sudhendu Shekhar"
                 class="doctor-img"
               />
@@ -449,7 +449,7 @@
           <div class="col-lg-4 col-md-6 animationL">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image1.jpg" alt="" />
+                <img src="image1.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>The Medical Minute: Quick Tips</h5>
@@ -474,7 +474,7 @@
           <div class="col-lg-4 col-md-6 reveal">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image2.jpg" alt="" />
+                <img src="image2.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>Healthy Habits for Busy Professionals</h5>
@@ -499,7 +499,7 @@
           <div class="col-lg-4 col-md-6 animationR">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image3.jpg" alt="" />
+                <img src="image3.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>Ask the Doctor: Real Answers</h5>
@@ -775,6 +775,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
