--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- rotating gradient behind -->
@@ -446,7 +446,7 @@
         <div
           class="d-flex flex-wrap justify-content-center align-items-center gap-3 award-icons mb-4"
         >
-          <img src="../static/image/logo2.jpg" alt="Award 2" />
+          <img src="logo2.jpg" alt="Award 2" />
           <!-- <img
             src="https://cdn-icons-png.flaticon.com/512/190/190411.png"
             alt="Award 3"
@@ -479,7 +479,7 @@
           <div class="col-lg-4 col-md-6 reveal">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image1.jpg" alt="" />
+                <img src="image1.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>The Medical Minute: Quick Tips</h5>
@@ -805,6 +805,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
+
