--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div>
               <!-- replace src with your image path -->
               <img
-                src="../static/image/image.png"
+                src="image.png"
                 alt="Dr Sudhendu Shekhar"
                 class="doctor-img"
               />
@@ -190,7 +190,7 @@
 
           <div class="col-lg-6 reveal">
             <div class="card map-card p-3">
-              <img src="../static/image/ssprofile1.jpg" alt="" />
+              <image/ssprofile1.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -504,7 +504,7 @@
           <div class="col-lg-4 col-md-6 reveal">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image2.jpg" alt="" />
+                <img src="image2.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>Healthy Habits for Busy Professionals</h5>
@@ -529,7 +529,7 @@
           <div class="col-lg-4 col-md-6 reveal">
             <div class="glass-card">
               <div class="card-img">
-                <img src="../static/image/image3.jpg" alt="" />
+                <img src="image3.jpg" alt="" />
               </div>
               <div class="card-body-content">
                 <h5>Ask the Doctor: Real Answers</h5>
@@ -808,4 +808,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
