--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
           <div class="col-lg-6 reveal">
             <div class="card map-card p-3">
-              <img scr="ssprofile1.jpg" alt="" />
+              <img src="ssprofile1.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -808,4 +808,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
